fix mail letter

--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<p> <%= @resource.email %> さんこんにちは!</p>
+<p> <%= @user.name %> さんこんにちは!</p>
 
 <p>誰かがパスワードのリセットを行いました。下記のリンクからパスワードをリセットできます。</p>
 
-<p><%= link_to 'パスワード変更', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワード変更', edit_password_url(@user, reset_password_token: @token) %></p>
 
 <p>もしあなたがパスワードの変更をした覚えが無ければ、このメールを無視して下さい。</p>
 <p>上記のリンクからパスワードをリセットしない限りは、特に何も起きません。</p>
