--- a/app/views/users/mailer/reset_password_instructions.html.erb
+++ b/app/views/users/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>誰かがパスワードのリセットを行いました。下記のリンクからパスワードをリセットできます。</p>
 
-<p><%= link_to 'パスワード変更', edit_password_url(@user, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワード変更', edit_password_url(@user, reset_password_token: @user.reset_password_token) %></p>
 
 <p>もしあなたがパスワードの変更をした覚えが無ければ、このメールを無視して下さい。</p>
 <p>上記のリンクからパスワードをリセットしない限りは、特に何も起きません。</p>
