--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,62 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+
+  <link rel="stylesheet" href="/foundation/foundation.min.css">
+  <script src="/foundation/foudation.min.js"></script>
+  <script src="/foundation/modernizr.js"></script>
 </head>
 <body>
 
+  <% if @award_account %>
+  <nav class="top-bar" data-topbar data-options="is_hover: false">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#"><%= yield(:title) %></a></h1>
+    </li>
+    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon">
+      <a href="#"><span>Menu</span></a>
+    </li>
+  </ul>
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="">
+	<a href="#"><%= @award_account._slug %></a>
+      </li>
+      <li class="active">
+	<%= link_to "ログアウト", :controller => :award_accounts, :action => :logout %>
+      </li>
+    </ul>
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li><%= link_to "応募作品一覧", :controller => :award_accounts, :action => :show %></li>
+      <li><%= link_to "ダウンロード履歴", :controller => :award_accounts, :action => :show_download %></li>
+    </ul>
+  </section>
+</nav>
+  <% else %>
+  <nav class="top-bar" data-topbar data-options="is_hover: false">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">協賛企業ログイン</a></h1>
+    </li>
+    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon">
+      <a href="#"><span>Menu</span></a>
+    </li>
+  </ul>
+</nav>
+<% end %>
+  
 <%= yield %>
 
+<script>
+  $(document).foundation();
+</script>
 </body>
 </html>
