ref #149 add table-layout and add link

--- a/app/views/accounts/show_works.html.erb
+++ b/app/views/accounts/show_works.html.erb
@@ -1,3 +1,12 @@
+<style>
+  table {
+    table-layout: fixed;
+  }
+  td {
+    overflow: hidden;
+  }
+</style>
+
 <div class="links">
   <span><%= link_to "ユーザ一覧", :controller => :accounts, :action => :show %> / 作品一覧 / <%= link_to "ダウンロード", :controller => :accounts, :action => :show_downloads %></span>
 </div>
@@ -14,8 +23,8 @@
     </tr>
     <% @works.each do |work| %>
     <tr>
-      <td><%= work.title %></td>
-      <td><%= work.description %></td>
+      <td><%= link_to work.title, {:controller => :works, :action => :show, :id => work._id} %></td>
+      <td><pre><%= work.description %></pre></td>
       <td><%= work.user.handle_name %> (<%= work.user.name %>)</td>
       <td><% if work.published %>
 	公開
