--- a/app/views/accounts/show_works.html.erb
+++ b/app/views/accounts/show_works.html.erb
@@ -19,7 +19,7 @@
       <th>詳細</th>
       <th>登録ユーザ(本名)</th>
       <th>公開/非公開</th>
-      <th>編集/削除</th>
+      <th>詳細/編集/削除</th>
     </tr>
     <% @works.each do |work| %>
     <tr>
@@ -33,6 +33,8 @@
 	<% end %>
       </td>
       <td>
+	<%= link_to "詳細", :controller => :accounts, :action => :show_work, :_id => work._id %>
+	/
 	<%= link_to "編集", :controller => :accounts, :action => :edit_work, :_id => work._id %>
 	/
 	<%= link_to "削除", {:controller => :accounts, :action => :delete_work, :_id => work._id}, {:class => :work_delete} %>
